Avoid Java 21 syntax for now.